@@ -6,52 +6,38 @@ if ![istarget epiphany*-*-*] {
 
 global objdir
 global subdir
-global sim
+global sim_path
 global global_cc_options
 global global_sim_options
 
-
-if ![info exists sim] {
-    set sim ""
-}
-set orig_sim "$sim"
-
-if ![info exists global_sim_options] {
-    set global_sim_options ""
-}
+set orig_sim_path "$sim_path"
 set orig_global_sim_options "$global_sim_options"
-
-if ![info exists global_cc_options] {
-    set global_cc_options ""
-}
 set orig_global_cc_options "$global_cc_options"
-
-set orig_target_sim [board_info target sim]
+set orig_global_ld_options "$global_ld_options"
 set orig_target_sim_options [board_info target sim,options]
-set orig_target_sim_ldflags [board_info target ldflags]
-
 
 # all machines
 set all_machs "epiphany32"
-
 
 set global_cc_options "-fno-diagnostics-color $srcdir/$subdir/lib.S"
 set global_sim_options "--ext-ram-size 0 --ext-ram-base 0 --core-mem 1024kB"
 
 # Use simulator frontend for these tests.
-set sim "$objdir/../$subdir/epiphany-elf-sim.py"
-set board_info([target_info name],sim) $sim
+set sim_path "$objdir/epiphany/epiphany-elf-sim.py"
 set board_info([target_info name],sim,options) ""
 
 # Use local SRAM for code and data
-set board_info([target_info name],ldflags) "\
-    [libgloss_link_flags] [newlib_link_flags] \
-    -Wl,--section-start=IVT_RESET=0,--section-start=RESERVED_CRT0_DATA=0x80 \
-    -Wl,--section-start=RESERVED_CRT0=0x100,--section-start=.init=0x300 \
-    -Wl,--section-start=.data_bank0=0x400 \
-    -Wl,-Ttext=0x1000,-Tdata=0x40000,--defsym=__heap_start=0x80000 \
-    -Wl,--defsym=__heap_end=0xb0000,--defsym=__stack=0xefff0 \
-    -Wl,--section-start=workgroup_cfg=0x28,--section-start=ext_mem_cfg=0x50"
+# NB: __text_start is currently used in the builtin linker script to calculate
+# the offset for .note.gnu.build-id which is included in newer epiphany-elf-gcc
+set global_ld_options "\
+    --section-start=IVT_RESET=0,--section-start=RESERVED_CRT0_DATA=0x80,\
+    --section-start=RESERVED_CRT0=0x100,--section-start=.init=0x300,\
+    --section-start=.data_bank0=0x400,\
+    -Ttext=0x1000,-Tdata=0x40000,--defsym=__heap_start=0x80000,\
+    --defsym=__heap_end=0xb0000,--defsym=__stack=0xefff0,\
+    --section-start=workgroup_cfg=0x28,--section-start=ext_mem_cfg=0x50,\
+    --defsym=__text_start=0x3ffc0"
+set global_ld_options [string map {" " ""} $global_ld_options]
 
 foreach src [lsort [glob -nocomplain $srcdir/$subdir/*.c]] {
     # If we're only testing specific files and this isn't one of them,
@@ -64,9 +50,8 @@ foreach src [lsort [glob -nocomplain $srcdir/$subdir/*.c]] {
 }
 
 # Restore
-set sim "$orig_sim"
+set sim_path "$orig_sim_path"
 set global_sim_options "$orig_global_sim_options"
 set global_cc_options "$orig_global_cc_options"
-set board_info([target_info name],sim]           "$orig_target_sim"
 set board_info([target_info name],sim,options]   "$orig_target_sim_options"
-set board_info([target_info name],ldflags]       "$orig_target_sim_ldflags"
+set global_ld_options "$orig_global_ld_options"
